tests/paczka1/fuzzy1/21826260.err
Error in line 6: GlA A870 31,6
Error in line 10: 95r A870 74,6
Error in line 18: 4iVa5T A870 69,7
Error in line 2: jFzVPHgyrbj A635 50,2
Error in line 25: pTsSgioxMl A870 90,0
Error in line 27: pTsSgioxMl A89 0,6
Error in line 16: GlA A89 94,9
